syntax = "proto3";
package types;
import "transaction.proto";

message Block {
	bytes parentHash = 1;
	bytes blockHash = 2;
	repeated Transaction transactions = 3;
	int64 timestamp = 4;
	bytes merkleRoot = 5;
	bytes txRoot = 6;
	bytes receiptRoot = 7;
	uint64 number = 8;
	int64 writeTime = 9;
	int64 commitTime = 10;
	int64 evmTime=11;
}

message Blocks{
    repeated Block batch = 1;


}
