syntax = "proto3";
package types;

message Transaction {
	bytes from = 1;
	bytes to = 2;
	bytes value = 3;
	int64 timestamp = 4;
	bytes signature = 5;
	uint64 id = 6;
	bytes transactionHash = 7;
}

message InvalidTransactionRecord {
    Transaction tx = 1;
    ErrType errType = 2;
    enum ErrType {
        OUTOFBALANCE = 0;
        SIGFAILED = 1;
        INVOKE_CONTRACT_FAILED=2;
        DEPLOY_CONTRACT_FAILED=3;
    }
    bytes errMsg = 3;
}
message InvalidTransactionRecords {
    repeated InvalidTransactionRecord records = 1;
}

message TransactionMeta {
    uint64 BlockIndex = 1;
    int64  Index = 2;
}
